@@ -168,7 +168,7 @@ WAGTAIL_SITE_NAME = "Test Site"
 # needs to here because it is used at the module level of wagtailusers.forms
 # when the module gets loaded. The decorator 'override_settings' does not work
 # in this scenario.
-WAGTAIL_USER_CUSTOM_FIELDS = ['country']
+WAGTAIL_USER_CUSTOM_FIELDS = ['country', 'attachment']
 
 WAGTAILADMIN_RICH_TEXT_EDITORS = {
     'default': {
