@@ -40,6 +40,7 @@ Changelog
  * Fix: Saving a page by pressing enter key no longer triggers a "Changes may not be saved message" (Sean Muck, Matt Westcott)
  * Fix: RoutablePageMixin no longer breaks in the presence of instance-only attributes such as those generated by FileFields (Fábio Macêdo Mendes)
  * Fix: The `--schema-only` flag on update_index no longer expects an argument (Karl Hobley)
+ * Fix: Added file handling to support custom user add/edit forms with images/files (Eraldo Energy)
 
 
 1.5.3 (18.07.2016)
